tests/res/arrays/error_string_index.say
print([1]["0"]); // error: Invalid array index: "0"